added code to HTML file

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -12,7 +12,37 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+     <section class="card" id="html-section">
+<h2>HTML</h2>
+<ul>
+  <li>Enter your HTML notes here</li>
+  <li>Any elements within the body will be visible to the user</li>
+  <li>HTML defines the structure for webpages</li>
+  <li>HTML contains elements for text, images, and headings</li>
+</ul>
+     </section>
+     <section class="card" id="css-section">
+<h2>CSS</h2>
+<ul>
+  <li>is used to style the content on the webpage such as font-size, colours, and font-family</li> 
+<li>CSS can be linked to your HTML document as an external resource</li>
+<li>Specific elements within HTMl can be styled using CSS as an external resource</li>
+</ul>
+     </section>
+     <section class="card" id="git-section">
+<h2>GIT</h2>
+<ul>
+  <li>Git Status: Indicates whether we are in the default or feature branch</li>
+  <li>Git checkout -b branch-name: To create a feature branch seperate from the default branch</li>
+  <li>Git commit -m "message": Allows developer to include a message for change</li>
+</ul>
+     </section>
+     <section class="card" id="javascript-section">
+<h2>Javascript</h2>
+<ul>
+  <li>Adds functionality to the page</li>
+</ul>
+     </section> 
     </main>
 
     <footer>
