added css to project

--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -27,6 +28,9 @@
   <li>is used to style the content on the webpage such as font-size, colours, and font-family</li> 
 <li>CSS can be linked to your HTML document as an external resource</li>
 <li>Specific elements within HTMl can be styled using CSS as an external resource</li>
+<li>A margin indicates how much space we want around the outside of an element</li>
+  <li>A padding indicates how much space we want around the content inside an element</li>
+  <li>You can select two or more elements using a comma</li>
 </ul>
      </section>
      <section class="card" id="git-section">
