--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -46,6 +46,8 @@
 <h2>Javascript</h2>
 <ul>
   <li>Adds functionality to the page</li>
+  <li>A variable is a named container that allows us to store data in our code.</li>
+   <li>Control flow is the order in which a computer executes code in a script.</li>
 </ul>
      </section> 
     </main>
